...
                                                <rect key="frame" x="20" y="7" width="30" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" identifier="listButtonFromConf"/>
                                                <state key="normal" title="List"/>
                                                <connections>
...
                                                <rect key="frame" x="355" y="7" width="39" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" identifier="clockButton"/>
                                                <state key="normal" title="Clock"/>
                                                <connections>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dRe-gJ-qlp">
                                        <rect key="frame" x="67" y="30" width="337" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="nameTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zyc-tG-mR3">
                                        <rect key="frame" x="101.66666666666666" y="322" width="37" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="closeButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="p1f-B1-6il"/>
...
                                                <rect key="frame" x="20" y="7" width="30" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" identifier="listButtonFromCanvas"/>
                                                <state key="normal" title="List"/>
                                                <connections>
...
                                                <rect key="frame" x="361" y="7" width="33" height="30"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" identifier="confButton"/>
                                                <state key="normal" title="Conf"/>
                                                <connections>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cj5-G4-63K">
                                        <rect key="frame" x="314" y="552" width="30" height="48"/>
                                        <accessibility key="accessibilityConfiguration" identifier="questionButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                        <state key="normal" title="?"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oJ8-Kr-Aa6">
                                        <rect key="frame" x="30" y="552" width="30" height="48"/>
                                        <accessibility key="accessibilityConfiguration" identifier="exclamationButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                        <state key="normal" title="!"/>
...
                                            <rect key="frame" x="364" y="4" width="30" height="36"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="addButton"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                            <state key="normal" title="+"/>
...
