...
    @IBOutlet weak var navigation: UINavigationItem!
    
    override func viewDidLoad() {
        super.viewDidLoad()

        navigation.leftBarButtonItem = self.editButtonItem
        navigation.leftBarButtonItem?.accessibilityIdentifier = "editButton"
        
        self.tableView.register(UINib(nibName: "ClockTableCell", bundle: nil), forCellReuseIdentifier: "ClockTableCell")
    }
    
    override func viewDidAppear(_ animated: Bool) {
        super.viewDidAppear(animated)
...
